# Network_Battleship_2vs1

./: .gitignore  CMakeLists.txt  Makefile  Protocol.txt  README.md
Docs/: Readme.md
Include/: Server.h
Source/: Client.cpp  Server.cpp
build-client-Desktop-Profile/: Makefile  client  client.debug  moc_controller.cpp  moc_mainwindow.cpp  moc_model.cpp  qrc_images.cpp  ui_mainwindow.h
build-server-Desktop-Profile/: Makefile  data.db  moc_dbcontroller.cpp  moc_dbwindow.cpp  moc_mainwindow.cpp  moc_server.cpp  qrc_images.cpp  server  server.debug  ui_dbwindow.h  ui_mainwindow.h
client/: client.pro  config.h  config.hpp  constants.h  constants.hpp  controller.cpp  controller.h  controller.hpp  dbcontroller.cpp  dbcontroller.hpp  field.cpp  field.h  field.hpp  fightshistorywindow.cpp  fightshistorywindow.h  fightshistorywindow.ui  images.cpp  images.h  images.hpp  images.qrc  images.qrc.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  mainwindow.ui  model.cpp  model.h  model.hpp  sounds.qrc
databased/: mainwindow.cpp  mainwindow.h  mainwindow.ui
placements/: generator.py
server/: client.cpp  client.h  client.hpp  config.h  database.qrc  databasecontroller.cpp  databasecontroller.h  databasecontroller.hpp  databasecontroller.ui  dbcontroller.cpp  dbcontroller.hpp  dbwindow.cpp  dbwindow.hpp  dbwindow.ui  field.cpp  field.h  field.hpp  gamecontroller.cpp  gamecontroller.h  gamecontroller.hpp  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  mainwindow.ui  server.cpp  server.h  server.hpp  server.pro  server.pro.user.3880b70
(+7 files in other folders)
